# tortoaster

./: CONTRIBUTING  Cargo.toml  Config.toml  Dockerfile  README.md  build.rs  compose.yml  dev.Dockerfile  docker-compose.yml  input.css  sqlx.Dockerfile  tailwind.config.js  watch_tailwind.Dockerfile
.github/workflows/: docker-publish.yml  docker.yml
.sqlx/: query-0c85ffd53ee6e5ffcaa16d34f24fc22df9b3e411e6003a579f7e6be9c9fbb595.json  query-18ab20bb788a04955f1ba66093c1869bc010bf79f846c9603e3d95cee048223d.json  query-1b123e7490e76693b6c397ef54db3c789bdb7491bc66c6cd419c1664009fca8b.json  query-2354a3f6ae1daed10cb9d52e5375c9bd90e7a65836bfc1a520ca6dc690084cdd.json  query-2373cd03b28e72284e3d2c429ebcaa1b694f3226eb79e957739cf3e2cf18da12.json  query-26b910aa004152d8d0a063003010dafb3c9fb2f7c7fa84cec3454b33940412d2.json  query-2918a33a6f678cd0f15f358e8f4b7a2a0fe97bc8aea046f3f499dd8bed47a1cb.json  query-3465715b53b31cd64b5a5d972a22fddfd0adb194e13e5c10f0f67f466992e7dc.json  query-3b210718a612cc667369fd5658ea0f3d7d4731c6d225f1d1e75c1e5709f7c000.json  query-3b9c2a27e82018927d1bcfd2b8c93c38868bffe076f21945a8183e56310ae73b.json  query-40cd9027744fdb7c8c14847ab88addae1ca393ccc4412d919b9817b4a0535273.json  query-445c4d1dd874be9aaeeb912ca6eb3695edccc2777b6a61808244741f0a70f310.json  query-50a0b32691e06e5a571f4975e541d7a1005eb15f5b2b384c6097033cbb226bd2.json  query-576a914aa07fb04d86e19ad3fd768eb39cb2a63fde04f53f936d96e229171e24.json  query-61bd8f21f363cfd3278bff8a4353568743ec0fc11624aa1fd3cf145d8e7478c1.json  query-6751e417fe15a45e3db6dcfd92106cc9f521d2fe8bfff396572b2e5830252e64.json  query-695defa02e5016b52790f346113e4911af373f616ab0194515d77b41014adb54.json  query-7824b4bd17b75e952bb405cb3b333e999ef08e9167b0edca20f93fe352f01469.json  query-7f4293cd6f915bd10f44bac4c10cb9332b555bb73a9b82aa076cdab71e230675.json  query-803cf951ae6f256fb9343fdacafaf3d75d564c77ba66d0b7993712e2a2c55584.json  query-83e57ff6f01830f582b95d6bd7738222ad6c6a6975a56759dde1089e06f8cec2.json  query-8526110622c9fb73948087225b8eed764fc1c079a240a118e07ba6945180bb07.json  query-913db2c956864616153f873f047fefcb7f20a8c3f4388664e5ac35c506353688.json  query-948c236bbefd86016c68959d7a4092fad48a2991e7c09e0f83b19c845c5e0707.json  query-9bb90d9b7cb7b6097d67d6ca563db9f94a24920ee5b591aaca38710b3ed76783.json  query-a241cda46c46b1263c553e9d1f132f3ff563f81b04e7e8b3d8b34946fe27c4fb.json  query-a6981691cb3a124278e5bd0a56f4273189138405912ec94c522bb191c5fb9d8b.json  query-ae547f8def904de36774158af9b1de4e0504bc5b0b4815c78ed7576c332a345b.json  query-b1651a7892c691bcc2ad35495c7a4dab36edb3d40547cb8741e1ac5b4d7691b7.json  query-c23cff61fec3e90de50fe682807066fefd8330c943d21f8cc07f1576a65176fe.json  query-cde182eb81561e33f7196b7ad016d7aee82687589088b485c2b39b91823e66c5.json  query-d047063c3aace7e2f2ff056e12b7e2e01773bba06ab4b570d93f0f1cc5eb880b.json  query-d10f6461ccbb93d9df3fa5cea3ab92de14987fd827092bb47f862ecd7c94cd52.json  query-d78635749918e71d63622fe5d21f6846d537847e17fb14dc97684f492c22574d.json  query-de2f10b53ebe2570d98d503ebcb433540dfd201616019122c9e209b4266187c7.json  query-de8d85cbafd01ef5d67520c2c825f752ba002e822ac655b6a3ba4960eb3ed93c.json  query-e3d67962cd01ae5b7772b40baab01d03ad3f1c7499ed31697e843b3edef4d114.json  query-ec264f58f73e2ffbaf46eb75d795d9ad752b5d4d362322352f44cddec3558f5e.json  query-ecd80b978105adc1f1c1b6a42bec660cae3c1085958afaedee2853ea66402271.json  query-ef7a0de5b2edc5880ada428c5d296ec502cbca05d6602281dc7d0e249d2746b9.json  (+3 more)
axum-s3/: Cargo.toml
axum-s3/src/: lib.rs
backend/: Cargo.toml
backend/.sqlx/: query-1b123e7490e76693b6c397ef54db3c789bdb7491bc66c6cd419c1664009fca8b.json  query-2373cd03b28e72284e3d2c429ebcaa1b694f3226eb79e957739cf3e2cf18da12.json  query-50caa5e634119b7d3f9f295f52547c1013b7c61506c1caf4eaa529c30681554e.json  query-79812a7f413aa32145f043d9eb18abea6cb065f74f0bbf153996e370e87861e8.json  query-93fb708aef8ecefb07133baaa301ee443df8521b03571f0e456bc1ff74123920.json  query-948c236bbefd86016c68959d7a4092fad48a2991e7c09e0f83b19c845c5e0707.json  query-b79334a2e781e1139080a0d0c26931caea56107cc87394c14def34ae15cae62a.json  query-f35a10dbeb0c6f60964cb820d4f63734f883beb17e3ca329f2f011761c13e2f1.json
backend/src/: database.rs  game.rs  main.rs  session.rs  state.rs
backend/src/api/: mod.rs
backend/src/dto/: users.rs
backend/src/repository/: comments.rs  files.rs
bucket_data/content/: 638672a7-613e-4771-b2a7-f7005bfb9aa2  beegone.md  bf1baff5-f283-4a30-87f9-b5ca05825db8  this-website.md  website.md
bucket_data/system/: projects  projects.md
bucket_data/thumbnails/: d410d185-f372-43e4-bc4b-888bada43d83
coloretto/: Cargo.toml
coloretto/src/: action.rs  deck.rs  lib.rs  player.rs  stack.rs
fixtures/: 20240405122531_projects.sql
frontend/: .env  package-lock.json  package.json  preset-tortoaster.ts  svelte.config.js  tailwind.config.ts  uno.config.ts  vite.config.ts
frontend/src/: app.css  app.html
keycloak/: master-realm.json  tortoaster-realm.json  tortoaster-users-0.json
migrations/: 20240215153403_initial.down.sql  20240215153403_initial.up.sql  20240310105832_auth.up.sql  20240513174947_sessions.down.sql  20240513174947_sessions.up.sql  20240515171813_keycloak.down.sql
proto/: tortoaster.proto
src/: api.rs  config.rs  error.rs  main.rs  model.rs  pagination.rs  partial.rs  proto.rs  render.rs  session.rs  state.rs  template.rs  user.rs
src/api/: auth.rs  comments.rs  files.rs  mod.rs  projects.rs  users.rs
src/dto/: comments.rs  mod.rs  projects.rs  users.rs
src/error/: mod.rs  page.rs  toast.rs
src/model/: auth.rs  comments.rs  mod.rs  projects.rs  user_entity.rs
src/repository/: auth.rs  comments.rs  files.rs  mod.rs  projects.rs  users.rs
src/template/: comments.rs  error.rs  files.rs  filters.rs  mod.rs  projects.rs
src/utils/: claims.rs  method.rs  mod.rs  pagination.rs
tailwind/: input.css  tailwind.config.js
templates/: base.html  error.html  error_toast.html  index.html  project.html  projects.html
templates/comments/: comment.html  component.html  new_comment.html
tortoaster-frontend/: deno.json  fresh.gen.ts  tailwind.config.ts
(+55 files in other folders)
