[workspace]
members = ["axum-s3"]

[package]
name = "tortoaster"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { git = "https://github.com/djc/askama.git", rev = "c1366e0" }
aws-config = "1.3.0"
aws-sdk-s3 = "1.25.0"
axum = { version = "0.7.4", features = ["macros", "multipart"] }
axum-extra = { version = "0.9.2", features = ["typed-routing"] }
axum-oidc = "0.4.0"
axum-s3 = { path = "axum-s3" }
axum-valid = "0.18.0"
backoff = { version = "0.4.0", features = ["tokio"] }
bytes = "1.6.0"
config = "0.14.0"
openidconnect = { version = "3.5.0", default-features = false }
pulldown-cmark = "0.11.0"
regex = "1.10.4"
serde = { version = "1.0.196", features = ["derive"] }
serde-inline-default = "0.2.0"
serde_with = "3.8.1"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "time", "uuid"] }
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.56"
time = { version = "=0.3.34", features = ["parsing", "serde"] }
time-humanize = "0.1.3"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "signal"] }
toml = "0.8.10"
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["fs"] }
tower-sessions = { version = "0.12.2", default-features = false, features = ["axum-core"] }
tower-sessions-redis-store = "0.12.0"
tower-sessions-sqlx-store = { version = "0.12.0", features = ["postgres"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["fast-rng", "serde", "v4"] }
validator = { version = "0.18.1", features = ["derive"] }
