[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
axum = "0.5.13"
axum-extra = { version = "0.3.6", features = ["cookie-signed"] }
coloretto = { path = "../coloretto" }
names = { version = "0.14.0", default-features = false }
rand = "0.8.5"
redis = { version = "0.21.5", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.14"
thiserror = "1.0"
tokio = { version = "1.20", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
